<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context="bsi.mpoo.traineeufrpe.gui.main.ActHome">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#225386"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="0dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <ViewFlipper
                android:id="@+id/viewflip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/acessibity_logo"
                    app:srcCompat="@drawable/gi3" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/acessibity_slide2"
                    app:srcCompat="@drawable/gi1" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/acessibity_slide3"
                    app:srcCompat="@drawable/gi2" />

            </ViewFlipper>


        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/txt_ola"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/txt_quem"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <Button
        android:id="@+id/butEstagiario"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundbutton"
        android:text="@string/btn_estagiario"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/butEmpregador"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundbutton"
        android:text="@string/btn_empregador"
        android:textColor="@color/White" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/contato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_contato"
            android:textColor="@color/colorHint"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/contato2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:text="@string/txt_click"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>