<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imagemEmpregadorDrawer"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/nav_header_desc"
        app:civ_border_width="2dp"
        android:layout_gravity="center"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:civ_border_color="#FFF"/>

    <TextView
        android:id="@+id/nomeEmpregadorDrawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textSize="18sp"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/White"/>

    <TextView
        android:id="@+id/emailEmpregadorDrawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/White"/>

</LinearLayout>
