<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/photo_profile"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/acessibity_perfil_estagiario_edit"
                android:scaleType="centerCrop"
                android:src="@drawable/user_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/campo_nome"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_nome_pessoa"
                android:singleLine="true"
                android:textSize="16sp"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toBottomOf="@+id/photo_profile" />

            <EditText
                android:id="@+id/campo_curso"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_curso"
                android:singleLine="true"
                android:textSize="16sp"
                android:inputType="textCapWords"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView9"
                app:layout_constraintTop_toBottomOf="@+id/campo_nome" />

            <EditText
                android:id="@+id/campo_instituicao"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_instituicao"
                android:singleLine="true"
                android:textSize="16sp"
                android:inputType="textCapWords"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView10"
                app:layout_constraintTop_toBottomOf="@+id/campo_curso" />

            <EditText
                android:id="@+id/campo_email"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toBottomOf="@+id/campo_instituicao" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/acessibity_icone_pessoa"
                android:src="@drawable/ic_user_hint"
                app:layout_constraintEnd_toStartOf="@+id/campo_nome"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photo_profile" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/acessibity_icone_curso"
                android:src="@drawable/ic_star_hint"
                app:layout_constraintEnd_toStartOf="@+id/campo_curso"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/campo_nome" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/acessibity_icone_instituicao"
                android:src="@drawable/ic_school_hint"
                app:layout_constraintEnd_toStartOf="@+id/campo_instituicao"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/campo_curso" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/acessibity_icone_email"
                android:src="@drawable/ic_email_hint"
                app:layout_constraintEnd_toStartOf="@+id/campo_email"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/campo_instituicao" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                android:contentDescription="@string/acessibity_perfil_estagiario_edit"
                android:src="@drawable/ic_camera"
                app:layout_constraintBottom_toBottomOf="@+id/photo_profile"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_curriculo"
                android:tint="@color/colorHint"
                app:layout_constraintTop_toBottomOf="@+id/campo_email"
                />

            <EditText
                android:id="@+id/campo_link"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:hint="Cole seu link aqui"
                android:linksClickable="true"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView12"
                app:layout_constraintTop_toBottomOf="@+id/campo_email" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>