<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.estagiario.acesso.ActEsqueciSenhaEstagiario">

    <TextView
        android:id="@+id/txtEmailOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/codigo_verif_enviado"
        android:textColor="@color/colorTextDark"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView1" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Recuperar senha"
        app:titleTextColor="@color/White" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/custom_seekbar_thumb"
                android:contentDescription="1">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="@color/White"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="64dp"
                android:layout_marginTop="13dp"
                android:text="@string/digite_email"
                android:textColor="@color/colorTextDark"
                android:textSize="26sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/campo_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView8"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/colorTextDark" />

            <Button
                android:id="@+id/btnEnviar"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/campo_email"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="101dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="99dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_button_green"
                android:text="@string/enviar"
                android:textColor="@color/White" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailOk">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/custom_seekbar_thumb"
                android:contentDescription="1">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="@color/White"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtInformeCod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="66dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:text="@string/informe_codigo_verif"
                android:textColor="@color/colorTextDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnOk"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/campo_codigo"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_button_green"
                android:text="@string/prosseguir"
                android:textColor="@color/White" />

            <EditText
                android:id="@+id/campo_codigo"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtInformeCod"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="100dp"
                android:ems="10"
                android:hint="XXXXXXXX"
                android:inputType="textCapSentences"
                android:maxLength="8"
                android:textAlignment="center"
                android:textColor="@color/colorTextDark"
                android:textSize="28sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/txtContato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/CONTATO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>